--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hari Narasimhan <hari@canvara.co.in> (http://canvara.co.in/)",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "3.4.1"
+    "bluebird": "3.4.1",
+    "lodash": "^4.13.1"
   }
 }
